--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.algonquin.androidlabs">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -13,22 +15,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity">
-
-        </activity>
-        <activity android:name=".ListItemActivity">
-
-        </activity>
-        <activity android:name=".ChatWindow">
-
-        </activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ListItemActivity" />
+        <activity android:name=".ChatWindow" />
+        <activity
+            android:name=".WeatherForecast"
+            android:label="@string/title_activity_weather_forecast" />
+        <activity
+            android:name=".MessageDetails"
+            android:label="@string/title_activity_message_details" />
     </application>
 
 </manifest>
